@@ -7,18 +7,18 @@ import java.util.List;
 import net.minecraft.src.Config;
 
 public class NativeMemory {
-	private static LongSupplier bufferAllocatedSupplier = makeLongSupplier(new String[][] {{"sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}, {"jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}});
-	private static LongSupplier bufferMaximumSupplier = makeLongSupplier(new String[][] {{"sun.misc.VM", "maxDirectMemory"}, {"jdk.internal.misc.VM", "maxDirectMemory"}});
+    private static final LongSupplier bufferAllocatedSupplier = makeLongSupplier(new String[][]{{"sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}, {"jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}});
+    private static final LongSupplier bufferMaximumSupplier = makeLongSupplier(new String[][]{{"sun.misc.VM", "maxDirectMemory"}, {"jdk.internal.misc.VM", "maxDirectMemory"}});
 
-	public static long getBufferAllocated() {
-		return bufferAllocatedSupplier == null ? -1L : bufferAllocatedSupplier.getAsLong();
-	}
+    public static long getBufferAllocated() {
+        return bufferAllocatedSupplier == null ? -1L : bufferAllocatedSupplier.getAsLong();
+    }
 
-	public static long getBufferMaximum() {
-		return bufferMaximumSupplier == null ? -1L : bufferMaximumSupplier.getAsLong();
-	}
+    public static long getBufferMaximum() {
+        return bufferMaximumSupplier == null ? -1L : bufferMaximumSupplier.getAsLong();
+    }
 
-	private static LongSupplier makeLongSupplier(String[][] paths) {
+    private static LongSupplier makeLongSupplier(String[][] paths) {
 		List<Throwable> list = new ArrayList();
 
 		for (int i = 0; i < paths.length; ++i) {
@@ -43,17 +43,17 @@ public class NativeMemory {
 		if (path.length < 2) {
 			return null;
 		} else {
-			Class oclass = Class.forName(path[0]);
-			Method method = oclass.getMethod(path[1], new Class[0]);
+            Class oclass = Class.forName(path[0]);
+            Method method = oclass.getMethod(path[1]);
 			method.setAccessible(true);
 			Object object = null;
 
 			for (int i = 2; i < path.length; ++i) {
-				String s = path[i];
-				object = method.invoke(object, new Object[0]);
-				method = object.getClass().getMethod(s, new Class[0]);
-				method.setAccessible(true);
-			}
+                String s = path[i];
+                object = method.invoke(object);
+                method = object.getClass().getMethod(s);
+                method.setAccessible(true);
+            }
 
 			Method finalMethod = method;
 			Object finalObject = object;
